--- a/example.env
+++ b/example.env
@@ -1,3 +1,17 @@
 NODE_ENV=development
 PORT=8000
-EXAMPLE="example-environmental-variable"
+TZ='UTC'
+CLIENT_ORIGIN=http://localhost:3000
+MIGRATION_DB_HOST=127.0.0.1
+MIGRATION_DB_PORT=5432
+MIGRATION_DB_NAME=whatdo
+MIGRATION_DB_USER=whatdo
+MIGRATION_DB_PASS=
+PROD_MIGRATION_DB_HOST=
+PROD_MIGRATION_DB_PORT=5432
+PROD_MIGRATION_DB_NAME=
+PROD_MIGRATION_DB_USER=
+PROD_MIGRATION_DB_PASS=
+DATABASE_URL="postgresql://whatdo@localhost/whatdo"
+TEST_DATABASE_URL="postgresql://whatdo@localhost/whatdo_test"
+JWT_SECRET="whatdo-jwt-secret"
