--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "postgrator --config postgrator-production-config.js",
+    "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku master"
   },
   "keywords": [],
@@ -18,12 +20,14 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
   }
 }
