--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.19.5",
     "morgan": "^1.9.1",
     "pg": "^7.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
     "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
   }
